samples/_failures_safe/1761369568_316a84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_106642f8.c: In function ‘main’:
./samples/SAFE/__tmp_106642f8.c:150:5: error: expected expression at end of input
  150 |     int token_count = tokenize(input, tokens,
      |     ^~~
./samples/SAFE/__tmp_106642f8.c:150:5: error: expected declaration or statement at end of input
